--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="user">User :</string>
     <string name="password">Password :</string>
     <string name="register">New Register</string>
-    <string name="name">name :</string>
+    <string name="name">Name :</string>
     <string name="title_activity_saler">Saler</string>
 
 
